# RustyProxy

./: Cargo.toml  Readme.md  config.toml
.ollamassist/conversations/: e4045f95-e7ff-40f4-8c38-e9765d2a1aa8.json
src/: config.rs  error.rs  lib.rs  proxy.rs  server.rs  upstream.rs
